feat(web): Add OAuth dashboard + banword management API
🎨 Web Dashboard (FastAPI + Jinja2 + Alpine.js + Tailwind CDN)
- OAuth Twitch flow with broadcaster token storage
- Banword CRUD API (/api/banwords/{channel})
- Clean responsive UI with dark theme

🛡️ Security Hardening (Production-Ready)
- Rate limiting: 30/min GET, 10/min POST/DELETE (slowapi)
- Security headers: X-Frame-Options, X-Content-Type-Options,
  X-XSS-Protection, Referrer-Policy, Permissions-Policy
- CSP calibrated for Alpine.js + Tailwind CDN
- Pydantic validation on banword input (regex + length)
- Cookie: httponly, samesite=lax, secure=auto (prod)

🔧 Bot Integration
- Auto-ban on banword detection (dry-run mode available)
- BanWordManager with SQLite storage + memory cache

📦 New Dependencies
- slowapi (rate limiting)
- pydantic (input validation)

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -231,3 +231,15 @@ logging:
 #   token: "oauth:xyz789uvw012"  # Token du compte bot
 #   bot_id: "987654321"         # User ID du compte bot
 #   channels: ["mon_pseudo_principal"]
+
+# ========================================
+# MODÉRATION AUTOMATIQUE
+# ========================================
+moderation:
+  banword:
+    # Mode dry-run : NE PAS BANNIR, juste notifier
+    # Mettre à false uniquement en production avec bot mod !
+    dry_run: true
+    
+    # Notifier dans le chat quand un banword est détecté
+    notify_chat: true
